--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "redis": "^2.6.0-1"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
-    "esformatter": "^0.9.1",
+    "esformatter": "^0.9.3",
     "esformatter-braces": "^1.2.1",
     "esformatter-dot-notation": "^1.3.1",
     "esformatter-quotes": "^1.0.3",
-    "eslint": "^2.2.0",
+    "eslint": "^2.8.0",
     "fakeredis": "^1.0.3",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.0.6",
     "hat": "^0.0.3",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3"
